added header section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment02</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link href="https://fonts.cdnfonts.com/css/berthalisa" rel="stylesheet">
+                                          
 </head>
-<body>
-    
+<body class="inter-font">
+    <header>
+        <div class="nav">
+         <nav class="nav-bar display-flex">
+            <h3 class="nav-bar-title">Fitness</h3>
+            <ul class="nav-links display-flex">
+                <li><a href="" class="nav-home">Home</a></li>
+                <li><a href="">Service</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">About</a></li>
+            </ul>
+         </nav>
+        </div>
+        <div class="banner display-flex">
+        <div class="banner-container">
+            <h1 class="banner-title">Get body in <br><span class="banner-miama">shape</span> & stay healthy</h1>
+            <p class="banner-description">A huge selection of health and fitness content,
+             healthy recipes and transformation stories to help you get fit and stay fit!
+            </p>
+            <button class="btn-primary banner-join-btn">Join Club Now!</button>
+            <button class="btn-primary banner-download-btn">Download App</button>
+        </div>
+        <div class="banner-img">
+           <img src="images/Images 2.png" alt="">
+           <div class="problem-btn">
+            <button class="circle"></button>
+            <span class="btn-350">350+ <br> <span class="btn-tutorial">Video tutorial</span> </span>
+           </div>
+           <div class="problem-btn2">
+            <span class="btn-500">500+ </span> <br> 
+            <span class="btn-tutorial">Free Workout Videos</span> 
+           </div>
+        </div>
+    </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
