added section one and two

--- a/index.html
+++ b/index.html
@@ -44,7 +44,51 @@
     </div>
     </header>
     <main>
+        <!--1st section-->
+         <section class="habit-section">
+           <div class="habit-title">
+            <h1 class="sheared-h1">Change Your Habits</h1>
+            <p class="sheared-p">We believe fitness should be accessible to everyone, everywhere, regardless of 
+                income or access to a gym.</p>
+            </div>
 
+            <div class="habit-img-container display-flex">
+                <div class="habit-img">
+                <img src="images/image 3.png" alt="">
+                <h3  class="sheared-h3">Movement</h3>
+                <p class="sheared-p">We believe fitness should be accessible to everyone</p>
+                </div>
+                    <div class="habit-img">
+                    <img src="images/image 2.png" alt="">
+                    <h3  class="sheared-h3">Time</h3>
+                    <p class="sheared-p">We believe fitness should be accessible to everyone</p>
+                   </div>
+                <div class="habit-img">
+                <img src="images/image 4.png" alt="">
+                <h3 class="sheared-h3">Practice</h3>
+                <p class="sheared-p">We believe fitness should be accessible to everyone</p>
+                </div>
+                  <div class="habit-img">
+                  <img src="images/image 2.png" alt="">
+                  <h3  class="sheared-h3">Weight Loss</h3>
+                  <p class="sheared-p">We believe fitness should be accessible to everyone</p>
+                  </div>
+            </div>
+         </section>
+        <!--2nd section-->
+         <section>
+       <div class="run-section display-flex">
+          <div class="run-container">
+             <h1 class="run-title sheared-h1">Run an Extra <br> Mile Easily</h1>
+             <p class="run-description sheared-p">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
+              With hundreds of professional workouts. </p>
+              <button class="btn-primary" style="background-color: #E6533C; border: 1px solid #E6533C;">Join Now</button>
+         </div>
+          <div class="run-img">
+            <img src="images/run.png" alt="">
+          </div>
+        </div>
+         </section>
     </main>
     <footer>
 
