added client section

--- a/index.html
+++ b/index.html
@@ -79,15 +79,56 @@
          <section>
        <div class="run-section display-flex">
           <div class="run-container">
-             <h1 class="run-title sheared-h1">Run an Extra <br> Mile Easily</h1>
+             <h1 class="run-title sheared-h1">Run an Extra <br>Mile Easily</h1>
              <p class="run-description sheared-p">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
               With hundreds of professional workouts. </p>
-              <button class="btn-primary" style="background-color: #E6533C; border: 1px solid #E6533C;">Join Now</button>
-         </div>
-          <div class="run-img">
+              <button class="btn-primary run-buttn" style="background-color: #E6533C; border: 1px solid #E6533C;">Join Now</button>
+            </div>
+          <div class="run-img display-flex">
             <img src="images/run.png" alt="">
           </div>
         </div>
+         </section>
+         <!--3rd section-->
+         <section class="client-section">
+        
+            <div class="client-description">
+                <h1 class="sheared-h1">Meet Our Client</h1>
+                <p class="sheared-p">"Welcome, fashion icon! Unleash your style and make a 
+                    statement with our trend-setting GYM center and with your favorite person.
+                </p>
+            </div>
+            <div class="client-img display-flex">
+               <div class="clint-img-con">
+                <img src="images/gym2.jpg" alt="">
+                <p class="sheared-p ellipsis">Harshbardhan Rane gave two of his day for a workout, and he liked working 
+                    out between 5:30 AM to 7:30 AM. He kept the gym time-limited to four days as 
+                    he found it boring and actively indulged himself into other physical 
+                    activities including Martial Arts, Horse Riding, Ballets and Lawn Tennis.</p>
+               </div> 
+               <div class="clint-img-con">
+                <img src="images/gym3.jpg" alt="">
+                <p class="sheared-p ellipsis">Sushant Singh Rajput  gave two of his day for a workout, and he liked working 
+                    out between 5:30 AM to 7:30 AM. He kept the gym time-limited to four days as 
+                    he found it boring and actively indulged himself into other physical 
+                    activities including Martial Arts, Horse Riding, Ballets and Lawn Tennis.</p>
+               </div> 
+                <div class="clint-img-con">
+                    <img src="images/gym5.jpg" alt="">
+                    <p class="sheared-p ellipsis">Nayantara is a fitness enthusiast and includes a combination of cardio 
+                    exercises and strength training to keep her body toned and healthy. Her 
+                    routine includes cycling, running, and weightlifting, with yoga and pilates 
+                    to improve body flexibility.</p>
+                </div>
+                <div class="clint-img-con">
+                <img src="images/gym1.webp" alt="">
+                <p class="sheared-p ellipsis">Samantha Ruth Prabhu is a fitness enthusiast and includes a combination of 
+                    cardio exercises and strength training to keep her body toned and healthy. 
+                    Her routine includes cycling, running, and weightlifting, with yoga and 
+                    pilates to improve body flexibility.</p>
+               </div> 
+            </div>
+    
          </section>
     </main>
     <footer>
