--- a/index.html
+++ b/index.html
@@ -130,6 +130,62 @@
             </div>
     
          </section>
+         <!--4th section-->
+         <div class="BMI-container">
+            <h1 class="sheared-h1">BMI Calculator</h1>
+            <p class="sheared-p">We believe fitness should be accessible to everyone, everywhere, regardless of
+             income or access to a gym.</p>
+        </div>
+         <section class="BMI">
+            
+            <div class="BMI-table display-flex">
+            <div class="BMI-table-column">
+                <h3 class="sheared-h3" style="text-align: center;">BMI Calculator Chart</h3>
+                <table>
+                    <tr>
+                      <th>BMI </th>
+                      <th>Weight Status</th>
+                    </tr>
+                    <tr>
+                      <td>Below 18.5</td>
+                      <td>Underweight</td>
+                    </tr>
+                    <tr>
+                      <td>18.5 - 24.9</td>
+                      <td>Healthy</td>
+                    </tr>
+                    <tr>
+                      <td>25.0 - 29.9</td>
+                      <td>Overweight</td>
+                    </tr>
+                    <tr>
+                      <td>30.0 - and Above</td>
+                      <td>Obese</td>
+                    </tr>
+                  </table>
+            </div>
+            <div class="BMI-calculator">
+                <div class="BMI-calculator-title" >
+                <h1 class="sheared-h3">Calculate your BMI</h1>
+                <p class="sheared-p">We believe fitness should be accessible to everyone, everywhere,
+                   regardless of income or access to a gym. </p>
+                </div>
+                <form class="BMI-input">
+                   <div>
+                    <input type="text" name="" id="" placeholder="Height/cm">
+                    <input type="text" placeholder="Weight/kg">
+                  </div> 
+                    <div><input type="text" placeholder="Age">
+                    <input type="text" placeholder="Sex">
+                  </div>
+                    <div class="input-select">
+                      <input type="text" name="" id="" placeholder="select and activity factor">
+                    </div>
+                    <button class="btn-primary" style="background-color: #E6533C; border: 1px solid #E6533C;">Calculator</button>
+                </form>
+            </div>
+            </div>
+         </section>
     </main>
     <footer>
 
