added team section

--- a/index.html
+++ b/index.html
@@ -186,6 +186,57 @@
             </div>
             </div>
          </section>
+         <!--5th section-->
+         <section class="Team">
+          <div class="Team-container">
+          <h1 class="sheared-h1">Meet Our Team</h1>
+          <p class="sheared-p">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+          </div>
+
+          <div class="img-container">
+
+<div class="ims-1st-cln display-flex">
+          <div class="img">
+            <img src="images/trainer1.png" alt="">
+            <h3 class="sheared-h3">Jerome Bell</h3>
+            <p class="sheared-p">Trainer</p>
+          </div>
+
+          <div  class="img">
+            <img src="images/trainer2.png" alt="">
+            <h3 class="sheared-h3">Cameron Williamson</h3>
+            <p class="sheared-p">Trainer</p>
+          </div>
+
+          <div  class="img">
+            <img src="images/trainer3.png" alt="">
+            <h3 class="sheared-h3">Darrell Steward</h3>
+            <p class="sheared-p">Trainer</p>
+          </div>
+ </div> 
+
+ <div class="ims-1st-cln display-flex">
+          <div  class="img">
+            <img src="images/trainer4.png" alt="">
+            <h3 class="sheared-h3">Dianne Russell</h3>
+            <p class="sheared-p">Trainer</p>
+          </div>
+
+          <div  class="img">
+            <img src="images/trainer5.png" alt="">
+            <h3 class="sheared-h3">Cody Fisher</h3>
+            <p class="sheared-p">Trainer</p>
+          </div>
+
+          <div  class="img">
+            <img src="images/trainer6.png" alt="">
+            <h3 class="sheared-h3">Theresa Webb</h3>
+            <p class="sheared-p">Trainer</p>
+          </div>
+</div> 
+        </div>
+
+         </section>
     </main>
     <footer>
 
