added footer section

--- a/index.html
+++ b/index.html
@@ -238,7 +238,35 @@
 
          </section>
     </main>
-    <footer>
+
+    <footer class="footer">
+      <div class="footer-container display-flex">
+      <div class="footer-foot">
+        <h1 class="sheared-h1" style="color: #E6533C; font-style: italic;">Fitness</h1>
+        <p class="sheared-p">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+      </div>
+    
+      <div class="footer-foot">
+        <h3 class="sheared-h3">Get Started</h3>
+        <h5 class="sheared-p">Service</h5>
+        <h5 class="sheared-p">Contact Us</h5>
+        <h5 class="sheared-p">Affiliate Program</h5>
+        <h5 class="sheared-p">About Us</h5>
+      </div>
+
+      <div class="footer-foot">
+        <h3 class="sheared-h3">Get Started</h3>
+        <h5 class="sheared-p">Fitness</h5>
+        <h5 class="sheared-p">Platform</h5>
+        <h5 class="sheared-p">Workout Libary</h5>
+        <h5 class="sheared-p">App Design</h5>
+      </div>
+    
+    </div>
+       <div> 
+        <hr style="color: #555454; width: 80%; text-align: center; margin-top: 50px;">
+        <h2 style="color: #8C8C8C; text-align: center;">All right reserved @Fitness 2024</h2>
+      </div>
 
     </footer>
 </body>
