--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                 <li><a href="">Contact</a></li>
                 <li><a href="">About</a></li>
             </ul>
+            <div class="hamburger">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+          </div>
          </nav>
         </div>
         <div class="banner display-flex">
