added changed style

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         <div class="nav">
          <nav class="nav-bar display-flex">
             <h3 class="nav-bar-title">Fitness</h3>
-            <ul class="nav-links display-flex">
+            <ul class="nav-links display-flex" >
                 <li><a href="" class="nav-home">Home</a></li>
                 <li><a href="">Service</a></li>
                 <li><a href="">Contact</a></li>
                 <li><a href="">About</a></li>
             </ul>
             <div class="hamburger">
+              <span class="bar"></span>
               <span class="bar"></span>
               <span class="bar"></span>
               <span class="bar"></span>
